# web-embedded-chat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.md  cloudflare-worker.js  configuration.js  docker-compose.yml  floating-chat.js
sql/: setup_telemetry.sql
src/: ai_client.rs  auth.rs  client_ip.rs  config.rs  dto.rs  error.rs  main.rs  rate_limit.rs  routes.rs  tracking.rs
src/telemetry/: database.rs  logger.rs  mod.rs  models.rs
static/: index.html  login.html
static/css/: dashboard.css
static/js/: app.js
static/js/lib/: api.js  charts.js
static/js/views/: analytics.js  conversations.js  operations.js  overview.js
